[gd_scene load_steps=19 format=4 uid="uid://dkjneqr4vf04w"]

[ext_resource type="Script" path="res://worlds/level_signals.gd" id="1_1roi1"]
[ext_resource type="PackedScene" uid="uid://bovapflawkyh" path="res://prefabs/player/player.tscn" id="2_wlgng"]
[ext_resource type="Script" path="res://worlds/follow_thing.gd" id="3_5yucd"]
[ext_resource type="Texture2D" uid="uid://dpneqkfqk5mvj" path="res://sprites/Background/BG_Placeholder.png" id="4_jdh76"]
[ext_resource type="Texture2D" uid="uid://b10repbx682cb" path="res://sprites/Background/tilesheet1.png" id="5_nxc8h"]
[ext_resource type="PackedScene" uid="uid://bycx0utujr7qt" path="res://prefabs/partygoer/partygoer.tscn" id="6_s03wq"]
[ext_resource type="PackedScene" uid="uid://djw3s61m8ih8c" path="res://prefabs/partygoer/partygoer_dog.tscn" id="7_xiu1f"]
[ext_resource type="Texture2D" uid="uid://l3ixci0mdpp2" path="res://icon.svg" id="10_5koe1"]
[ext_resource type="Texture2D" uid="uid://wdilcwlyp1c1" path="res://sprites/placeholder/Debugempty.png" id="11_d7nho"]
[ext_resource type="Script" path="res://worlds/anxiety_bar.gd" id="12_v8vr6"]
[ext_resource type="PackedScene" uid="uid://cchwrfy400lx4" path="res://prefabs/props/bar.tscn" id="13_cx0op"]
[ext_resource type="Script" path="res://UI/clock.gd" id="13_y8ygh"]
[ext_resource type="Script" path="res://prefabs/god.gd" id="14_rb6bv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxbmk"]
texture = ExtResource("5_nxc8h")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
1:3/0 = 0
5:3/0 = 0
6:3/0 = 0
9:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
1:5/0 = 0

[sub_resource type="TileSet" id="TileSet_b871j"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_mxbmk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nbou"]
size = Vector2(75, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgycl"]
size = Vector2(246.5, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wsq4"]
size = Vector2(246.5, 107)

[node name="PiotrusScene" type="Node2D"]
script = ExtResource("1_1roi1")

[node name="Player" parent="." instance=ExtResource("2_wlgng")]
position = Vector2(-75, -30)
gravity_scale = 0.0

[node name="MainCamera" type="Camera2D" parent="." node_paths=PackedStringArray("thing_to_follow")]
zoom = Vector2(3, 3)
script = ExtResource("3_5yucd")
thing_to_follow = NodePath("../Player")

[node name="BGBlack" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = -2
texture_filter = 1
position = Vector2(4, 1)
scale = Vector2(12.7297, 25.8596)
texture = ExtResource("4_jdh76")

[node name="TileMapLayer_Walls" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAD8/wAAAAAFAAIAAAD9/wAAAAAGAAIAAAD+/wAAAAAFAAIAAAD//wAAAAAGAAIAAAAAAAAAAAAFAAIAAAABAAAAAAAGAAIAAAACAAAAAAAFAAIAAAADAAAAAAAGAAIAAAAEAAAAAAAFAAIAAAAFAAAAAAAGAAIAAAAGAAAAAAAFAAIAAAAHAAAAAAAGAAIAAAAHAP//AAAGAAEAAAD5////AAAGAAEAAAD7////AAAGAAEAAAD8////AAAFAAEAAAD9////AAAGAAEAAAD+////AAAFAAEAAAD/////AAAGAAEAAAAAAP//AAAFAAEAAAABAP//AAAGAAEAAAACAP//AAAFAAEAAAADAP//AAAGAAEAAAAEAP//AAAFAAEAAAAFAP//AAAGAAEAAAAGAP//AAAFAAEAAAAGAP7/AAAGAAEAAAAFAP7/AAAFAAEAAAAEAP7/AAAGAAEAAAADAP7/AAAFAAEAAAACAP7/AAAGAAEAAAABAP7/AAAFAAEAAAAAAP7/AAAGAAEAAAD///7/AAAFAAEAAAD+//7/AAAGAAEAAAD9//7/AAAFAAEAAAD8//7/AAAGAAEAAAD7//7/AAAFAAEAAAD5//7/AAAFAAEAAAD4//7/AAAGAAEAAAAHAP7/AAAFAAEAAAD4//3/AAAGAAEAAAAHAP3/AAAFAAEAAAD5//3/AAAFAAEAAAD6//3/AAAGAAEAAAD7//3/AAAFAAEAAAD8//3/AAAGAAEAAAD9//3/AAAFAAEAAAD+//3/AAAGAAEAAAD///3/AAAFAAEAAAAAAP3/AAAGAAEAAAABAP3/AAAFAAEAAAACAP3/AAAGAAEAAAADAP3/AAAFAAEAAAAEAP3/AAAGAAEAAAAFAP3/AAAFAAEAAAAGAP3/AAAGAAEAAAD3/wAAAAAFAAIAAAD4/wAAAAAFAAIAAAD5/wAAAAAGAAIAAAD6/wAAAAAFAAIAAAD7/wAAAAAGAAIAAAAIAAAAAAAFAAIAAAAIAP//AAAFAAEAAAAIAP7/AAAGAAEAAAAIAP3/AAAGAAEAAAD3////AAAFAAEAAAD3//7/AAAFAAEAAAD3//3/AAAFAAEAAAD4////AAAFAAEAAAD6////AAAFAAEAAAD6//7/AAAGAAEAAAD5//v/AAAFAAEAAAD5//z/AAAFAAEAAAD6//v/AAAGAAEAAAD6//z/AAAGAAEAAAD3//z/AAAFAAEAAAD4//z/AAAGAAEAAAD3//v/AAAFAAEAAAD4//v/AAAGAAEAAAD7//z/AAAFAAEAAAD8//z/AAAGAAEAAAD9//z/AAAFAAEAAAD+//z/AAAGAAEAAAD///z/AAAFAAEAAAAAAPz/AAAGAAEAAAABAPz/AAAFAAEAAAACAPz/AAAGAAEAAAADAPz/AAAFAAEAAAAEAPz/AAAGAAEAAAAFAPz/AAAFAAEAAAAGAPz/AAAGAAEAAAAHAPz/AAAFAAEAAAAIAPz/AAAGAAEAAAAHAPv/AAAFAAEAAAAIAPv/AAAGAAEAAAAFAPv/AAAFAAEAAAAGAPv/AAAGAAEAAAAFAPr/AAAFAAEAAAAGAPr/AAAGAAEAAAADAPr/AAAFAAEAAAAEAPr/AAAGAAEAAAABAPr/AAAFAAEAAAACAPr/AAAGAAEAAAD///r/AAAFAAEAAAAAAPr/AAAGAAEAAAD9//r/AAAFAAEAAAD+//r/AAAGAAEAAAD7//r/AAAFAAEAAAD8//r/AAAGAAEAAAD5//r/AAAFAAEAAAD6//r/AAAGAAEAAAD3//r/AAAFAAEAAAD4//r/AAAGAAEAAAD7//v/AAAFAAEAAAD8//v/AAAGAAEAAAD9//v/AAAFAAEAAAD+//v/AAAGAAEAAAD///v/AAAFAAEAAAAAAPv/AAAGAAEAAAABAPv/AAAFAAEAAAACAPv/AAAGAAEAAAADAPv/AAAFAAEAAAAEAPv/AAAGAAEAAAAHAPr/AAAFAAEAAAAIAPr/AAAGAAEAAAA=")
tile_set = SubResource("TileSet_b871j")

[node name="TileMapLayer_Floor" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAD7/wEAAAACAAAAAAD7/wIAAAACAAEAAAD8/wEAAAACAAAAAAD8/wIAAAACAAEAAAD9/wEAAAACAAAAAAD9/wIAAAACAAEAAAD+/wEAAAACAAAAAAD+/wIAAAACAAEAAAD//wEAAAACAAAAAAD//wIAAAACAAEAAAAAAAEAAAACAAAAAAAAAAIAAAACAAEAAAABAAEAAAACAAAAAAABAAIAAAACAAEAAAACAAEAAAACAAAAAAACAAIAAAACAAEAAAADAAEAAAACAAAAAAADAAIAAAACAAEAAAAEAAEAAAACAAAAAAAEAAIAAAACAAEAAAAFAAEAAAACAAAAAAAFAAIAAAACAAEAAAAGAAEAAAACAAAAAAAGAAIAAAACAAEAAAAHAAEAAAACAAAAAAAHAAIAAAACAAEAAAAIAAEAAAADAAAAAAAIAAIAAAADAAEAAAD5/wEAAAACAAAAAAD5/wIAAAACAAEAAAD6/wEAAAACAAAAAAD6/wIAAAACAAEAAAD3/wEAAAABAAAAAAD3/wIAAAABAAEAAAD4/wEAAAACAAAAAAD4/wIAAAACAAEAAAD3/wMAAAACAAAAAAD4/wMAAAACAAAAAAD5/wMAAAACAAAAAAD6/wMAAAACAAAAAAD7/wMAAAACAAAAAAD8/wMAAAACAAAAAAD9/wMAAAACAAAAAAD+/wMAAAACAAAAAAD//wMAAAACAAAAAAAAAAMAAAACAAAAAAABAAMAAAACAAAAAAACAAMAAAACAAAAAAADAAMAAAACAAAAAAAEAAMAAAACAAAAAAAFAAMAAAACAAAAAAAGAAMAAAACAAAAAAAHAAMAAAACAAAAAAAIAAMAAAACAAAAAAAHAAQAAAACAAAAAAAIAAQAAAACAAAAAAAFAAQAAAACAAAAAAAGAAQAAAACAAAAAAADAAQAAAACAAAAAAAEAAQAAAACAAAAAAABAAQAAAACAAAAAAACAAQAAAACAAAAAAD//wQAAAACAAAAAAAAAAQAAAACAAAAAAD9/wQAAAACAAAAAAD+/wQAAAACAAAAAAD7/wQAAAACAAAAAAD8/wQAAAACAAAAAAD5/wQAAAACAAAAAAD6/wQAAAACAAAAAAD3/wQAAAACAAAAAAD4/wQAAAACAAAAAAD3/wUAAAACAAEAAAD4/wUAAAACAAEAAAD5/wUAAAACAAEAAAD6/wUAAAACAAEAAAD7/wUAAAACAAEAAAD8/wUAAAACAAEAAAD9/wUAAAACAAEAAAD+/wUAAAACAAEAAAD//wUAAAACAAEAAAAAAAUAAAACAAEAAAABAAUAAAACAAEAAAACAAUAAAACAAEAAAADAAUAAAACAAEAAAAEAAUAAAACAAEAAAAFAAUAAAACAAEAAAAGAAUAAAACAAEAAAAHAAUAAAACAAEAAAAIAAUAAAACAAEAAAADAP//AAAFAAMAAAAEAP//AAAGAAMAAAA=")
tile_set = SubResource("TileSet_b871j")

[node name="TileMapLayer_Stuff" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAD3//3/AAAHAAQAAAD4//3/AAAIAAQAAAD5//3/AAAHAAQAAAD6//3/AAAIAAQAAAD7//3/AAAHAAQAAAD8//3/AAAIAAQAAAD9//3/AAAHAAQAAAD+//3/AAAIAAQAAAD///3/AAAHAAQAAAAAAP3/AAAIAAQAAAABAP3/AAAHAAQAAAACAP3/AAAIAAQAAAADAP3/AAAHAAQAAAAEAP3/AAAIAAQAAAAFAP3/AAAHAAQAAAAGAP3/AAAIAAQAAAAHAP3/AAAHAAQAAAAIAP3/AAAIAAQAAAA=")
tile_set = SubResource("TileSet_b871j")

[node name="Partygoer" parent="." instance=ExtResource("6_s03wq")]
position = Vector2(100, 0)

[node name="Partygoer2" parent="." instance=ExtResource("7_xiu1f")]
position = Vector2(-33, 6)

[node name="WorldColliders" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldColliders"]
position = Vector2(-145.5, -6.5)
shape = SubResource("RectangleShape2D_5nbou")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldColliders"]
position = Vector2(3.75, 84)
shape = SubResource("RectangleShape2D_bgycl")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldColliders"]
position = Vector2(14, -117)
shape = SubResource("RectangleShape2D_0wsq4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="AnxietyBar" type="TextureProgressBar" parent="UI/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 60.0
grow_horizontal = 2
nine_patch_stretch = true
texture_under = ExtResource("10_5koe1")
texture_progress = ExtResource("11_d7nho")
script = ExtResource("12_v8vr6")

[node name="Label" type="Label" parent="UI/UI/AnxietyBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = -25.0
offset_right = 45.0
offset_bottom = -2.0
grow_horizontal = 2
text = "Anxiety Bar"

[node name="Clock" type="Label" parent="UI/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "ðŸ•’Time LeftðŸ•’: 30"
script = ExtResource("13_y8ygh")

[node name="God" type="Node" parent="."]
script = ExtResource("14_rb6bv")

[node name="GameTimer" type="Timer" parent="God"]
wait_time = 900.0
one_shot = true
autostart = true

[node name="GameTick" type="Timer" parent="God"]
autostart = true

[node name="Interactables" type="Node2D" parent="."]

[node name="Bar" parent="Interactables" instance=ExtResource("13_cx0op")]

[connection signal="timeout" from="God/GameTimer" to="God" method="_on_game_timer_timeout"]
[connection signal="timeout" from="God/GameTick" to="God" method="_on_game_tick_timeout"]
